app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-api-ice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mi-api-ice
  template:
    metadata:
      labels:
        app: mi-api-ice
    spec:
      containers:
      - name: mi-api-ice
        image: maciasberenice/ice:ice
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: mi-api-ice
spec:
  selector:
    app: mi-api-ice
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: LoadBalancer
